# trilium

mintmemo/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mintmemo/.github/workflows/: ci.yml
mintmemo/mintmemo/: cli.py  config.py  db.py  markdown.py  repo.py  schemas.py  web.py
mintmemo/mintmemo/static/: styles.css
mintmemo/mintmemo/templates/: _note_card.html  base.html  index.html  note_form.html  note_view.html  tags.html
mintmemo/tests/: test_smoke.py
