[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mintmemo"
version = "0.1.0"
description = "Local-first Markdown notes with instant full-text search (SQLite FTS5) and a clean FastAPI web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "markdown-it-py>=3.0.0",
  "mdit-py-plugins>=0.4.0",
  "markupsafe>=2.1",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.26",
  "ruff>=0.4",
]

[project.scripts]
mintmemo = "mintmemo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
